# TenderOptima

./: .dockerignore  .env  .env.dev  .env.example  .env.optimized  .gitignore  .replit  ADMIN_PANEL_AUDIT_REPORT.md  ADMIN_PANEL_FIELDS_UPDATE_REPORT.md  AGENTS.md  ASYNC_PROCESSING_IMPLEMENTATION.md  ATTACHMENT_PROCESSING_FIX_REPORT.md  BELARUS_REGIONS_UPDATE_REPORT.md  CACHING_RULES_README.md  CHECKPOINT-README.md  CHECKPOINT_ANALYSIS.md  CHROME_CACHE_FIX_README.md  COMPREHENSIVE_TEST_RESULTS.md  COOKIES.md  DOC_HANDLER_REPLACEMENT_REPORT.md  DOC_ROUTING_FIX_REPORT.md  DYNAMIC_SOFFICE_SEARCH_REPORT.md  Dockerfile  EMAIL_CHECKING_IMPROVEMENT_REPORT.md  EMAIL_CONFIG_LOADING_FIX_REPORT.md  EMAIL_DETECTION_IMPROVEMENT_REPORT.md  EMAIL_FIX_REPORT.md  EMAIL_IMPROVEMENT_TEMPLATES_IMPLEMENTATION.md  EMAIL_LOADING_DEBUG_REPORT.md  EMAIL_TEMPLATES_CLEANUP_REPORT.md  EMAIL_TEMPLATES_UNIFICATION_COMPLETE_REPORT.md  EMAIL_TEMPLATES_UNIFICATION_REPORT.md  ENHANCED_AUTH_README.md  ENHANCED_SYSTEM_REPORT.md  FILE_PROCESSING_FIXES.md  FINAL_EMAIL_FIX_REPORT.md  FINAL_IMPROVED_TEST_RESULTS.md  FIXES_SUMMARY.md  IMAP_SIMPLIFICATION_REPORT.md  IMPROVEMENT_REQUEST_MODAL_ENHANCEMENTS.md  (+269 more)
.cursor/: mcp.json  (+1 more)
parser/: google_parser.py  main.py  orchestrator.py  pyproject.toml  search_manager.py  site_contact_scrapper.py  yand_keygud.json  yandex_parser.py
services/backend/: .dockerignore  .env.example  .env.test  Dockerfile  __init__.py  alembic.ini  enums.py  main.py  pyproject.toml
services/backend/api/: __init__.py  deps.py
services/backend/api/admin/: router.py  schemas.py
services/backend/api/auth/: helpers.py  router.py  schemas.py
services/backend/api/billing/: router.py  schemas.py
services/backend/api/blacklist_domains/: router.py  schemas.py
services/backend/api/consultations/: router.py  schemas.py
services/backend/api/email_templates/: router.py  schemas.py
services/backend/api/feedback/: router.py  schemas.py
services/backend/api/response_analysis/: router.py  schemas.py
services/backend/api/responses/: router.py  schemas.py
services/backend/api/search_history/: router.py
services/backend/api/subscriptions/: enforcement.py  helpers.py  schemas.py  usage.py
services/backend/api/supplier_bookmarks/: router.py  schemas.py
services/backend/api/suppliers/: router.py  schemas.py
services/backend/api/tz_analysis/: router.py  schemas.py
services/backend/api/tz_creation/: router.py  schemas.py
services/backend/api/user_requests/: router.py  schemas.py
services/backend/celery_app/: celery_config.py  utils.py
services/backend/celery_app/context/: __init__.py  worker_context.py
services/backend/celery_app/tasks/: analysis_tasks.py  billing_tasks.py  consultation_tasks.py  email_tasks.py  parser_tasks.py  security_tasks.py  tz_creation_tasks.py
services/backend/core/: config.py  logging_settings.py
services/backend/db/dao/: __init__.py  base_dao.py  blacklisted_domain_dao.py  consultation_dao.py  email_message_dao.py  email_template_dao.py  frontend_error_log_dao.py  idea_suggestion_dao.py  referral_invitation_dao.py  request_dao.py  response_analysis_dao.py  search_dao.py  subscription_billing_dao.py  subscription_dao.py  supplier_bookmark_dao.py  supplier_dao.py  tz_analysis_dao.py  tz_analysis_supplier_dao.py  tz_creation_dao.py  user_dao.py
services/backend/db/models/: __init__.py  base.py  blacklisted_domain.py  consultation.py  email_template.py  frontend_error_log.py  idea_suggestion.py  referral_invitation.py  request.py  response.py  search.py  subscription.py  subscription_billing.py  supplier.py  supplier_bookmark.py  tz_analysis.py  tz_analysis_supplier.py  tz_creation.py  user.py
services/backend/migration/: env.py
services/backend/migration/versions/: 4bfd46feed61_make_extra_emails_null.py  868f55bbdd40_.py  a1b2c3d4e5f6_add_tz_analyses_table.py  a1b2c3d4e5f6_add_user_consent_revocation.py  a6b7c8d9e0f1_add_supplier_bookmarks.py  a9b1c2d3e4f5_add_tz_requirements_count.py  b1c2d3e4f5a6_add_tz_analysis_suppliers.py  b2c3d4e5f6a7_add_tz_analysis_status.py  b2c3d4e5f6a7_consultation_agree_marketing_and_unique_contacts.py  b7c8d9e0f1a2_restructure_supplier_bookmarks.py  c2d3e4f5a6b7_add_previous_parameters.py  c3d4e5f6a7b8_add_response_analysis_status.py  c3d4e5f6a7b8_user_email_and_subscriptions.py  cf208df5ccd1_clear.py  d3e4f5a6b7c8_add_supplier_status_and_items_overrides.py  d4e5f6a7b8c9_add_tz_creation_wizard.py  d4e5f6a7b8c9_slim_response_analyses.py  e4f5a6b7c8d9_add_supplier_primary_kp.py  e5f6a7b8c9d0_add_tz_analysis_title_draft.py  f0a1b2c3d4e5_add_kp_filenames.py  f1b2c3d4e5f6_add_confirmed.py  f5a6b7c8d9e0_add_email_templates.py  f67b0fb6e5ad_change_fk_to_subscription.py  g1h2i3j4k5l6_add_request_supplier_is_winner.py  g2c3d4e5f6a7_add_requirements_fields.py  (+23 more)
services/backend/schemas/: __init__.py  analysis.py  extracted_document.py  parser.py  thread.py  user_email_settings.py
services/backend/scripts/: basic_email_templates.py  initial_data.py  seed_subscriptions.py
services/backend/services/: db_service.py
services/backend/tests/: conftest.py  test_consultation_router.py  test_consultation_schema.py  test_referral_registration.py  test_requirements_struct.py  test_requirements_struct_pages.py  test_tz_creation_docx.py  test_tz_creation_router.py  test_tz_creation_service.py  test_tz_prompt.py
services/backend/utils/: amount_words.py  comparison_price.py  email_matching.py  email_utils.py  imap_poll.py  jwt_utils.py  login_lockout.py  ocr.py  page_count.py  requirements_struct.py  search_utils.py  secret_encryption.py  security.py  subscription_catalog.py  subscription_usage.py  text_chunker.py  tz_storage.py  user_email_credentials.py  user_email_settings.py  user_utils.py  xlsx_export.py
services/parser/: .dockerignore  Dockerfile  main.py  orchestrator.py  pyproject.toml  search_manager.py  site_contact_scrapper.py  yandex_parser.py
(+1084 files in other folders)
