[project]
name = "cursor-10-11-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "jwt>=1.4.0",
    "langchain-google-community>=3.0.5",
    "pandas>=3.0.2",
    "phonenumbers>=9.0.29",
    "pydantic>=2.13.3",
    "selectolax>=0.4.7",
    "uvicorn>=0.46.0",
    "yandexcloud>=0.387.0",
]
