[project]
name = "TenderOptima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "pwdlib[argon2]>=0.3.0",
    "aiohttp>=3.13.5",
    "email-validator>=2.3.0",
    "fake-useragent>=2.2.0",
    "google-api-python-client>=2.196.0",
    "langchain-google-community>=4.0.0",
    "langgraph>=1.1.10",
    "pandas>=3.0.2",
    "phonenumbers>=9.0.30",
    "python-dotenv>=1.2.2",
    "selectolax>=0.4.8",
    "yandexcloud>=0.389.0",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "bs4>=0.0.2",
    "lxml>=6.1.0",
]


[dependency-groups]
dev = ["ruff>=0.15.12"]

[tool.ruff]
exclude = [".git", ".pytest_cache", ".ruff_cache", ".venv", "migration"]

line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"
