[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "email-validator>=2.3.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.196.0",
    "jwt>=1.4.0",
    "langchain-google-community>=4.0.0",
    "langgraph>=1.1.10",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "phonenumbers>=9.0.30",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "selectolax>=0.4.8",
    "uvicorn>=0.46.0",
    "yandexcloud>=0.389.0",
]
