[project]
name = "tenderoptima-backend"
version = "0.1.0"
description = "TenderOptima API and Celery workers"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "bs4>=0.0.2",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
    "chardet>=7.4.3",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "openpyxl>=3.1.5",
    "openai>=2.38.0",
    "cryptography>=48.0.0",
    "phonenumbers>=9.0.34",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "ruff>=0.15.12"]

[tool.ruff]
exclude = [".git", ".pytest_cache", ".ruff_cache", ".venv", "migration"]

line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
