[project]
name = "tenderoptima-parser"
version = "0.1.0"
description = "Supplier search parser service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.0",
    "email-validator>=2.3.0",
    "fake-useragent>=2.0.3",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "phonenumbers>=9.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "selectolax>=0.4.8",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "ruff>=0.15.12"]

[tool.ruff]
exclude = [".git", ".pytest_cache", ".ruff_cache", ".venv"]

line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"
